# musicdexer

./: .gitignore  .musicdexer.cpp.kate-swp  CHANGELOG  CMakeLists.txt  INSTALL  README.md  TODO  customqsqltablemodel.cpp  customqsqltablemodel.h  main.cpp  musicdexer.kdev4  musicdexer.pro  musicdexer.ui  ui_musicdexer.h
.kdev4/: musicdexer.kdev4
cmake/Modules/: COPYING-CMAKE-SCRIPTS  FindTaglib.cmake
res/: COPYING  musicdexer.qrc
res/data/: musicdexer.sh
src/: customqsqltablemodel.cpp  customqsqltablemodel.h  main.cpp  musicdexer.cpp  musicdexer.h  musicdexer.ui
